--- a/src/Components/Roles/Roles.module.css
+++ b/src/Components/Roles/Roles.module.css
@@ -1,5 +1,5 @@
 .rolesPage {
-  background: linear-gradient(to right, #21304c, #1f3347 90%);
+  background-color: rgba(0, 0, 0, 0.941);
   min-height: 100vh;
   padding-top: 120px;
   padding-bottom: 20px;
@@ -12,9 +12,25 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.RoleButton {
+  background-color: #cbcbcb0a;
+  color: rgb(255, 255, 255);
+  border: 1px solid #9897977c;
+  border-radius: 8px;
+  padding: 5px 50px;
+  font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+.RoleButton:hover {
+  background-color: rgba(55, 55, 55, 0.479) !important;
+}
 .rolesTable {
   margin-top: 30px;
-  background: linear-gradient(to right, #2a3d61, #1c3855 90%);
+  background-color: rgba(55, 55, 55, 0.479);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -22,7 +38,7 @@
 }
 .innerTable {
   width: 97%;
-  background-color: rgb(45, 68, 81);
+  background-color: rgba(55, 55, 55, 0.479);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,22 +55,36 @@
   width: 97%;
 }
 
-.realTable th,
-.realTable td {
-  border-right: none; /* تشيل الفاصل العمودي */
-  border-left: none; /* اختياري */
+.UserButton {
+   background-color: rgba(10, 104, 159, 0.884);
+    color: #ffffff;
+    border: 1px solid rgb(53, 61, 74);
+    border-Radius: 8px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+    
 }
-/* الجدول نفسه */
+.UserButton:hover {
+   background-color: rgba(13, 79, 117, 0.884) !important;
+    
+}
+
+
+
 .realTable {
   width: 100%;
   border-collapse: collapse;
-  color: #f0f0f0; /* نص فاتح */
+  color: #f0f0f0;
+  border-collapse: separate;
+  border-spacing: 0;
+  border: 1px solid #222222;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-/* رؤوس الأعمدة */
 .realTable thead th {
-  background-color: #000000; /* header أسود كامل */
-  color: #f0f0f0;
+  background-color: #0000006b;
+  color: #ffffffa6;
   padding: 10px;
   text-align: left;
   position: sticky;
@@ -63,22 +93,26 @@
   border-bottom: 1px solid #444;
 }
 
-/* خلايا الـ body */
 .realTable tbody td {
-  background-color: #1a1a1a; /* خلفية داكنة */
+  background-color: #1a1a1a;
   padding: 10px;
   vertical-align: middle;
   border-bottom: 1px solid #333;
 }
 
-/* hover على الصف */
-.realTable tbody tr:hover {
-  background-color: #333333; /* درجة داكنة مختلفة عند hover */
+.realTable th,
+.realTable td {
+  border-left: none;
+  border-right: none;
+}
+
+.realTable {
+  border: 1px solid #222222;
 }
 
 /* hover على الصف */
 
-.permissionsDiv{
+.permissionsDiv {
   padding: 10px 15px;
   height: 25px;
   background-color: grey;
@@ -87,6 +121,6 @@
   align-items: center;
   border-radius: 20px;
   color: white;
-  display: inline-flex ;
+  display: inline-flex;
   margin-right: 10px;
 }
