--- a/src/Components/Admin/admin.module.css
+++ b/src/Components/Admin/admin.module.css
@@ -96,42 +96,77 @@
   border-left: none;
   border-right: none;
 }
+.toggleCol{
+    word-break: break-word !important;
+  white-space: normal !important;
+}
 
 .realTable {
   border: 1px solid #222222;
 }
 
-.UserButton {
-   background-color: rgba(10, 104, 159, 0.884);
-    color: #ffffff;
-    border: 1px solid #000000ff;
-    border-Radius: 8px;
-    padding: 15px 50px;
-    font-Weight: 500;
-    font-Size: 18px;
-    cursor: pointer;
-    text-Decoration: none;
-    transition: 0.2s ease-in-out;
-    
+.activebtn{
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
+  background-color:rgb(10, 104, 159);
+  transition: 0.2s ease-in-out;
 }
-.UserButton:hover {
-   background-color: rgba(7, 68, 103, 0.884) !important;
-    
+.activebtn:hover{
+  background-color:rgba(10, 104, 159, 0.884);;
+}
+.inactivebtn{
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
+  background-color:#cbcbcb16;
+  transition: 0.2s ease-in-out;
+}
+.inactivebtn:hover{
+  background-color: rgba(55, 55, 55, 0.479);
 }
 
-.RoleButton {
-   background-color:#cbcbcb0a;
-    color: rgb(255, 255, 255);
-    border: 1px solid #9897977c;
-    border-Radius: 8px;
-    padding: 15px 50px;
-    font-Weight: 500;
-    font-Size: 18px;
-    cursor: pointer;
-    text-Decoration: none;
-    transition: 0.2s ease-in-out;
+.lockIcon{
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color:#cbcbcb15;
+  transition: 0.2s ease-in-out;
 }
-.RoleButton:hover{
-   background-color: rgba(55, 55, 55, 0.479) !important;
-   
+.lockIcon:hover{
+  background-color: rgba(55, 55, 55, 0.601);
 }
+.openlockIcon{
+  border: none;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color:#cbcbcb6c;
+  transition: 0.2s ease-in-out;
+}
+.openlockIcon:hover{
+  background-color: rgba(55, 55, 55, 0.479);
+}
+@media (max-width:426px) {
+  .parentKpis,.bgTable{
+    gap: 10px;
+  }
+  .adminTilte{
+    text-align: center;
+    margin-top: 20px;
+  }
+  .toggleCol2{
+     word-break: break-word !important;
+  white-space: normal !important;
+  }
+
+}
+@media (min-width:426px) and (max-width:768px) {
+.adminTilte{
+  text-align: center;
+}
+}
+
