--- a/src/Components/Main/main.module.css
+++ b/src/Components/Main/main.module.css
@@ -1,6 +1,6 @@
 .mainBody{
   height: 100vh;
-  background: linear-gradient(to right, #11273e, #370106);
+   background-color: rgba(0, 0, 0, 0.908);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +8,48 @@
 }
 .parentMain{
   display: flex;
-  justify-content: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  text-align: center;
+  gap: 0px;
 
+}
+.clientButton {
+   background-color: rgba(10, 104, 159, 0.884);
+    color: #ffffff;
+    border: 1px solid #000000ff;
+    border-Radius: 8px;
+    padding: 15px 70px;
+    font-Weight: 500;
+    font-Size: 18px;
+    cursor: pointer;
+    text-Decoration: none;
+    transition: 0.2s ease-in-out;
+    
+}
+.clientButton:hover {
+   background-color: rgba(7, 68, 103, 0.884) !important;
+    
+}
+
+.userButton {
+   background-color:#cbcbcb0a;
+    color: rgb(255, 255, 255);
+    border: 1px solid #9897977c;
+    border-Radius: 8px;
+    padding: 15px 70px;
+    font-Weight: 500;
+    font-Size: 18px;
+    cursor: pointer;
+    text-Decoration: none;
+    transition: 0.2s ease-in-out;
+}
+.userButton:hover{
+   background-color: rgba(55, 55, 55, 0.479) !important;
+   
+}
+@media (max-width:425px) {
+  .parentMain{
+    gap: 20px;
+     flex-direction: column;
+  }
 }
