--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -31,6 +31,11 @@
   border-radius: 15px;
   width: 90px;
   text-decoration: none;
+  border: none;
+}
+.logoutbtn:hover {
+  background-color: rgba(19, 32, 84, 0.432);
+  
 }
 
 
