--- a/src/Components/MyPermissions/MyPermissions.module.css
+++ b/src/Components/MyPermissions/MyPermissions.module.css
@@ -1,1 +1,14 @@
-.MyPermissions {}
+.MyPermissionsPage {
+  background-color: rgba(0, 0, 0, 0.941);
+  height: 100vh;
+}
+
+.permissionsH {
+position: absolute;
+  top: 120px;
+  color: white;
+  font-size: "2.25rem";
+  background: linear-gradient(to right, white, #bcbcbcff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
