--- a/src/Components/Users/users.module.css
+++ b/src/Components/Users/users.module.css
@@ -351,3 +351,12 @@
     height: 12px;
   }
 }
+.userlink{
+  color: white;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+.userlink:hover{
+  color: rgb(59, 178, 247);
+  text-decoration: underline;
+}
