--- a/src/Components/Roles/Roles.module.css
+++ b/src/Components/Roles/Roles.module.css
@@ -211,6 +211,16 @@
   color: rgba(149, 149, 149, 0.601) !important;
 }
 
+.userlink{
+  color: white;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+.userlink:hover{
+  color: rgb(59, 178, 247);
+  text-decoration: underline;
+}
+
 /* //////////////////////////////////// */
 
 .allDiv {
