--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -76,3 +76,10 @@
   background: inherit; 
 }
 
+.active{
+  color: black !important;
+  transition: 0.3s ease-in-out;
+}
+.active:hover{
+  color: black !important;
+}
