--- a/src/Components/RolesDetails/RolesDetails.module.css
+++ b/src/Components/RolesDetails/RolesDetails.module.css
@@ -61,6 +61,7 @@
   background-color: rgb(27, 27, 27);
 }
 
+
 .pdGrid2 {
   display: flex;
   justify-content: space-between;
@@ -82,15 +83,20 @@
   }
   .pdGrid {
     display: flex;
+    flex-wrap: wrap;      /* مهم علشان العناصر تنزل تحت */
     justify-content: center;
+    gap: 15px;  
+    
   }
   .pdUserBtn {
     padding: 5px 30px !important;
     font-size: 13px;
   }
   .pdField {
-    padding: 5px !important;
+    width: 46%;
   }
+
+
   .pdGrid2 {
     gap: 10px;
   }
